<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="320dp"
        android:layout_height="144dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/ctumartlogo" />

    <TextView
        android:id="@+id/internetError"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/internetError"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/compatiableError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/compatibleError"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/OkButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/internetError"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="Ok"
        tools:ignore="HardcodedText" />

</RelativeLayout>
